# opencode-egui

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md
src/: app.rs  main.rs  models_dev.rs
src/audio/: error.rs  mod.rs
src/audio/stt/: capture.rs  engine.rs  mod.rs  resampler.rs
src/auth/: mod.rs
src/client/: api.rs  events.rs  mod.rs  providers.rs
src/config/: mod.rs  models.rs
src/discovery/: mod.rs  process.rs  spawn.rs
src/error/: api.rs  discovery.rs  events.rs  mod.rs  spawn.rs
src/startup/: auth.rs
src/tests/: agent_picker.rs  mod.rs
src/types/: agent.rs  models.rs
